@@ -1,3 +1,8 @@
+2015-08-08  Benno Schulenberg  <bensberg@justemail.net>
+	* src/winio.c (display_string): For some reason the reallocation done
+	by null_at() messes things up.  So put in the null byte "manually".
+	This is a fix -- or workaround -- for Savannah bug #45718.
+
 2015-08-03  Benno Schulenberg  <bensberg@justemail.net>
 	* src/rcfile.c (parse_binding): Check the value of shortcut->toggle
 	only if it actually is a toggle.  Found with valgrind.
